_sass/modules/_posts.scss
.posts {
  @extend .block;
  margin-bottom: 0;
  .posts__item {
    position: relative;
  }
  .posts__image {
    position: absolute;
    top: -10px;
    right: -10px;
    bottom: -10px;
    left: -10px;
    z-index: -1;
    opacity: 0;
    transition: opacity 0.3s;
    -webkit-filter: brightness(50%);
    filter: brightness(50%);
  }
  .posts__link {
    display: block;
    transition: border-bottom-color 0.3s;
    &:hover, &:active, &:focus {
      box-shadow: inset 0 0 0 rgba($color-salmon, 0.15);
      border-bottom-color: $color-salmon;
    }
    &.posts__link--has-banner {
      &:hover ~ .posts__image {
        opacity: 1;
      }
      &:hover ~ .posts__details,
      &:hover ~ .posts__details .posts__meta,
      &:hover ~ .posts__details .posts__meta .posts__wordcount {
        color: $color-white;
      }
    }
  }
  .posts__details {
    padding-top: 0.5em;
    margin-bottom: 2em;
    color: $color-light-grey;
    transition: color 0.3s;
    @media (min-width: $screen-sm-min) {
      display: -webkit-box;
      display: -webkit-flex;
      display: -ms-flexbox;
      display: flex;
    }
    @media (max-width: $screen-sm-min) {
      display: block;
    }
  }
  .posts__meta {
    transition: color 0.3s;
    color: $color-mid-grey;
    @media (min-width: $screen-sm-min) {
      -webkit-box-flex: 1;
      -webkit-flex: 1;
      -ms-flex: 1;
      flex: 1;
    }
    @media (max-width: $screen-sm-min) {
      display: block;
      padding-bottom: 0.5em;
    }
  }

  .posts__wordcount {
    transition: color 0.3s;
    &:before {
      content: "("
    }
    &:after {
      content: ")"
    }
    color: $color-light-grey;
  }

  .posts__date,
  .posts__categories {
    @media (min-width: $screen-sm-min) {
      margin-left: 2em;
    }
    @media (max-width: $screen-sm-min) {
      margin-right: 1em;
    }
  }
  .posts__categories {
    text-transform: capitalize;
  }
}

.post {
  @extend .block;
  .post__title {
    color: $color-white;
    background: $brand-primary;
    display: inline-block;
    padding: 2px 4px;
    margin-bottom: 0;
  }
  .post__date,
  .post__meta {
    color: $color-light-grey;
  }
  .post__content {
    h1, h2, h3, h4, h5, h6 {
      color: $brand-primary;
    }
    img {
      @extend .img-responsive;
    }
    strong {
      background: darken($color-off-white, 5%);
    }
    blockquote {
      border-left: 0.25em solid darken($color-off-white, 5%);
      p {
        font-size: 1em;
        color: $color-light-grey;
      }
    }
    .footnotes {
      color: $color-light-grey;
      ol {
        @include type(10);
        padding-left: 0;
        list-style-position: inside;
      }
      p {
        font-size: 1em;
      }
    }
  }
  .post__categories {
    @include type(10);
    color: $color-light-grey;
    border-top: 2px solid darken($color-off-white, 5%);
    padding-top: 2em;
    display: inline-block;
    strong {
      background: darken($color-off-white, 5%);
    }
  }

  .paginator {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-bottom: 0;
    padding-top: 8em;
    .paginator__item {
      &:first-child {
        -webkit-box-flex: 1;
        -webkit-flex: 1;
        -ms-flex: 1;
        flex: 1;
      }
      a:before, a:after {
        font-size: 1.5em;
      }
    }
    .paginator__item--previous,
    .paginator__item--next {
      @extend .paginator__item;
    }
    .paginator__item--previous {
      padding-right: 1em;
      a:before {
        content: attr(symbol);
      }
    }
    .paginator__item--next {
      padding-left: 1em;
      text-align: right;
      a:after {
        content: attr(symbol);
      }
    }
  }
}

